--- a/starter_code/model_1.ipynb
+++ b/starter_code/model_1.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting sklearn\n",
+      "  Downloading sklearn-0.0.tar.gz (1.1 kB)\n",
+      "Requirement already satisfied, skipping upgrade: scikit-learn in c:\\users\\narje\\anaconda3\\lib\\site-packages (from sklearn) (0.23.2)\n",
+      "Requirement already satisfied, skipping upgrade: joblib>=0.11 in c:\\users\\narje\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (0.17.0)\n",
+      "Requirement already satisfied, skipping upgrade: scipy>=0.19.1 in c:\\users\\narje\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.5.2)\n",
+      "Requirement already satisfied, skipping upgrade: numpy>=1.13.3 in c:\\users\\narje\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (1.19.2)\n",
+      "Requirement already satisfied, skipping upgrade: threadpoolctl>=2.0.0 in c:\\users\\narje\\anaconda3\\lib\\site-packages (from scikit-learn->sklearn) (2.1.0)\n",
+      "Building wheels for collected packages: sklearn\n",
+      "  Building wheel for sklearn (setup.py): started\n",
+      "  Building wheel for sklearn (setup.py): finished with status 'done'\n",
+      "  Created wheel for sklearn: filename=sklearn-0.0-py2.py3-none-any.whl size=1321 sha256=93bdaa8bcd404068a94be9d3bdf41e8699e0b088351cf2b217a855edb3d525a8\n",
+      "  Stored in directory: c:\\users\\narje\\appdata\\local\\pip\\cache\\wheels\\22\\0b\\40\\fd3f795caaa1fb4c6cb738bc1f56100be1e57da95849bfc897\n",
+      "Successfully built sklearn\n",
+      "Installing collected packages: sklearn\n",
+      "Successfully installed sklearn-0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Update sklearn to prevent version mismatches\n",
     "!pip install sklearn --upgrade"
@@ -12,9 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Requirement already satisfied: joblib in c:\\users\\narje\\anaconda3\\lib\\site-packages (0.17.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# install joblib. This will be used to save your model. \n",
     "# Restart your kernel after installing \n",
@@ -23,11 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
+    "from tensorflow.keras.utils import to_categorical"
    ]
   },
   {
@@ -39,9 +72,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  koi_disposition  koi_fpflag_nt  koi_fpflag_ss  koi_fpflag_co  koi_fpflag_ec  \\\n",
+       "0       CONFIRMED              0              0              0              0   \n",
+       "1  FALSE POSITIVE              0              1              0              0   \n",
+       "2  FALSE POSITIVE              0              1              0              0   \n",
+       "3       CONFIRMED              0              0              0              0   \n",
+       "4       CONFIRMED              0              0              0              0   \n",
+       "\n",
+       "   koi_period  koi_period_err1  koi_period_err2  koi_time0bk  \\\n",
+       "0   54.418383     2.479000e-04    -2.479000e-04   162.513840   \n",
+       "1   19.899140     1.490000e-05    -1.490000e-05   175.850252   \n",
+       "2    1.736952     2.630000e-07    -2.630000e-07   170.307565   \n",
+       "3    2.525592     3.760000e-06    -3.760000e-06   171.595550   \n",
+       "4    4.134435     1.050000e-05    -1.050000e-05   172.979370   \n",
+       "\n",
+       "   koi_time0bk_err1  ...  koi_steff_err2  koi_slogg  koi_slogg_err1  \\\n",
+       "0          0.003520  ...             -81      4.467           0.064   \n",
+       "1          0.000581  ...            -176      4.544           0.044   \n",
+       "2          0.000115  ...            -174      4.564           0.053   \n",
+       "3          0.001130  ...            -211      4.438           0.070   \n",
+       "4          0.001900  ...            -232      4.486           0.054   \n",
+       "\n",
+       "   koi_slogg_err2  koi_srad  koi_srad_err1  koi_srad_err2         ra  \\\n",
+       "0          -0.096     0.927          0.105         -0.061  291.93423   \n",
+       "1          -0.176     0.868          0.233         -0.078  297.00482   \n",
+       "2          -0.168     0.791          0.201         -0.067  285.53461   \n",
+       "3          -0.210     1.046          0.334         -0.133  288.75488   \n",
+       "4          -0.229     0.972          0.315         -0.105  296.28613   \n",
+       "\n",
+       "         dec  koi_kepmag  \n",
+       "0  48.141651      15.347  \n",
+       "1  48.134129      15.436  \n",
+       "2  48.285210      15.597  \n",
+       "3  48.226200      15.509  \n",
+       "4  48.224670      15.714  \n",
+       "\n",
+       "[5 rows x 41 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>koi_disposition</th>\n      <th>koi_fpflag_nt</th>\n      <th>koi_fpflag_ss</th>\n      <th>koi_fpflag_co</th>\n      <th>koi_fpflag_ec</th>\n      <th>koi_period</th>\n      <th>koi_period_err1</th>\n      <th>koi_period_err2</th>\n      <th>koi_time0bk</th>\n      <th>koi_time0bk_err1</th>\n      <th>...</th>\n      <th>koi_steff_err2</th>\n      <th>koi_slogg</th>\n      <th>koi_slogg_err1</th>\n      <th>koi_slogg_err2</th>\n      <th>koi_srad</th>\n      <th>koi_srad_err1</th>\n      <th>koi_srad_err2</th>\n      <th>ra</th>\n      <th>dec</th>\n      <th>koi_kepmag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CONFIRMED</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>54.418383</td>\n      <td>2.479000e-04</td>\n      <td>-2.479000e-04</td>\n      <td>162.513840</td>\n      <td>0.003520</td>\n      <td>...</td>\n      <td>-81</td>\n      <td>4.467</td>\n      <td>0.064</td>\n      <td>-0.096</td>\n      <td>0.927</td>\n      <td>0.105</td>\n      <td>-0.061</td>\n      <td>291.93423</td>\n      <td>48.141651</td>\n      <td>15.347</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>FALSE POSITIVE</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>19.899140</td>\n      <td>1.490000e-05</td>\n      <td>-1.490000e-05</td>\n      <td>175.850252</td>\n      <td>0.000581</td>\n      <td>...</td>\n      <td>-176</td>\n      <td>4.544</td>\n      <td>0.044</td>\n      <td>-0.176</td>\n      <td>0.868</td>\n      <td>0.233</td>\n      <td>-0.078</td>\n      <td>297.00482</td>\n      <td>48.134129</td>\n      <td>15.436</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>FALSE POSITIVE</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1.736952</td>\n      <td>2.630000e-07</td>\n      <td>-2.630000e-07</td>\n      <td>170.307565</td>\n      <td>0.000115</td>\n      <td>...</td>\n      <td>-174</td>\n      <td>4.564</td>\n      <td>0.053</td>\n      <td>-0.168</td>\n      <td>0.791</td>\n      <td>0.201</td>\n      <td>-0.067</td>\n      <td>285.53461</td>\n      <td>48.285210</td>\n      <td>15.597</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CONFIRMED</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.525592</td>\n      <td>3.760000e-06</td>\n      <td>-3.760000e-06</td>\n      <td>171.595550</td>\n      <td>0.001130</td>\n      <td>...</td>\n      <td>-211</td>\n      <td>4.438</td>\n      <td>0.070</td>\n      <td>-0.210</td>\n      <td>1.046</td>\n      <td>0.334</td>\n      <td>-0.133</td>\n      <td>288.75488</td>\n      <td>48.226200</td>\n      <td>15.509</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CONFIRMED</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>4.134435</td>\n      <td>1.050000e-05</td>\n      <td>-1.050000e-05</td>\n      <td>172.979370</td>\n      <td>0.001900</td>\n      <td>...</td>\n      <td>-232</td>\n      <td>4.486</td>\n      <td>0.054</td>\n      <td>-0.229</td>\n      <td>0.972</td>\n      <td>0.315</td>\n      <td>-0.105</td>\n      <td>296.28613</td>\n      <td>48.224670</td>\n      <td>15.714</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 41 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"exoplanet_data.csv\")\n",
     "# Drop the null columns where all values are null\n",
@@ -49,6 +129,37 @@
     "# Drop the null rows\n",
     "df = df.dropna()\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "Index(['koi_disposition', 'koi_fpflag_nt', 'koi_fpflag_ss', 'koi_fpflag_co',\n",
+       "       'koi_fpflag_ec', 'koi_period', 'koi_period_err1', 'koi_period_err2',\n",
+       "       'koi_time0bk', 'koi_time0bk_err1', 'koi_time0bk_err2', 'koi_impact',\n",
+       "       'koi_impact_err1', 'koi_impact_err2', 'koi_duration',\n",
+       "       'koi_duration_err1', 'koi_duration_err2', 'koi_depth', 'koi_depth_err1',\n",
+       "       'koi_depth_err2', 'koi_prad', 'koi_prad_err1', 'koi_prad_err2',\n",
+       "       'koi_teq', 'koi_insol', 'koi_insol_err1', 'koi_insol_err2',\n",
+       "       'koi_model_snr', 'koi_tce_plnt_num', 'koi_steff', 'koi_steff_err1',\n",
+       "       'koi_steff_err2', 'koi_slogg', 'koi_slogg_err1', 'koi_slogg_err2',\n",
+       "       'koi_srad', 'koi_srad_err1', 'koi_srad_err2', 'ra', 'dec',\n",
+       "       'koi_kepmag'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -60,12 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set features. This will also be used as your x values.\n",
-    "selected_features = df[['names', 'of', 'selected', 'features', 'here']]"
+    "X = df.drop(\"koi_disposition\", axis=1)"
    ]
   },
   {
@@ -79,16 +190,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y=df[\"koi_disposition\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "      koi_fpflag_nt  koi_fpflag_ss  koi_fpflag_co  koi_fpflag_ec  koi_period  \\\n",
+       "6080              1              0              0              0   12.496435   \n",
+       "3001              0              0              0              0   11.615625   \n",
+       "570               0              1              0              0   10.980246   \n",
+       "4897              1              0              0              0  466.908240   \n",
+       "625               0              1              1              1    1.061933   \n",
+       "\n",
+       "      koi_period_err1  koi_period_err2  koi_time0bk  koi_time0bk_err1  \\\n",
+       "6080     2.213000e-04    -2.213000e-04   132.035800          0.014300   \n",
+       "3001     1.528000e-04    -1.528000e-04   131.968430          0.008230   \n",
+       "570      6.930000e-07    -6.930000e-07   137.137607          0.000053   \n",
+       "4897     1.194000e-02    -1.194000e-02   136.373100          0.019000   \n",
+       "625      1.250000e-06    -1.250000e-06   133.850441          0.000978   \n",
+       "\n",
+       "      koi_time0bk_err2  ...  koi_steff_err2  koi_slogg  koi_slogg_err1  \\\n",
+       "6080         -0.014300  ...            -286      3.805           0.390   \n",
+       "3001         -0.008230  ...             -72      4.083           0.368   \n",
+       "570          -0.000053  ...            -159      4.462           0.098   \n",
+       "4897         -0.019000  ...            -146      4.456           0.102   \n",
+       "625          -0.000978  ...            -167      3.975           0.259   \n",
+       "\n",
+       "      koi_slogg_err2  koi_srad  koi_srad_err1  koi_srad_err2         ra  \\\n",
+       "6080          -0.130     2.730          0.535         -1.248  289.23080   \n",
+       "3001          -0.092     1.453          0.218         -0.510  293.52756   \n",
+       "570           -0.182     0.897          0.238         -0.119  282.79764   \n",
+       "4897          -0.361     0.867          0.448         -0.103  297.65436   \n",
+       "625           -0.111     1.851          0.383         -0.575  288.90253   \n",
+       "\n",
+       "            dec  koi_kepmag  \n",
+       "6080  44.412483      13.054  \n",
+       "3001  41.111439      15.162  \n",
+       "570   43.578129      14.212  \n",
+       "4897  43.178551      15.202  \n",
+       "625   44.632992      12.953  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>koi_fpflag_nt</th>\n      <th>koi_fpflag_ss</th>\n      <th>koi_fpflag_co</th>\n      <th>koi_fpflag_ec</th>\n      <th>koi_period</th>\n      <th>koi_period_err1</th>\n      <th>koi_period_err2</th>\n      <th>koi_time0bk</th>\n      <th>koi_time0bk_err1</th>\n      <th>koi_time0bk_err2</th>\n      <th>...</th>\n      <th>koi_steff_err2</th>\n      <th>koi_slogg</th>\n      <th>koi_slogg_err1</th>\n      <th>koi_slogg_err2</th>\n      <th>koi_srad</th>\n      <th>koi_srad_err1</th>\n      <th>koi_srad_err2</th>\n      <th>ra</th>\n      <th>dec</th>\n      <th>koi_kepmag</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>6080</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>12.496435</td>\n      <td>2.213000e-04</td>\n      <td>-2.213000e-04</td>\n      <td>132.035800</td>\n      <td>0.014300</td>\n      <td>-0.014300</td>\n      <td>...</td>\n      <td>-286</td>\n      <td>3.805</td>\n      <td>0.390</td>\n      <td>-0.130</td>\n      <td>2.730</td>\n      <td>0.535</td>\n      <td>-1.248</td>\n      <td>289.23080</td>\n      <td>44.412483</td>\n      <td>13.054</td>\n    </tr>\n    <tr>\n      <th>3001</th>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>11.615625</td>\n      <td>1.528000e-04</td>\n      <td>-1.528000e-04</td>\n      <td>131.968430</td>\n      <td>0.008230</td>\n      <td>-0.008230</td>\n      <td>...</td>\n      <td>-72</td>\n      <td>4.083</td>\n      <td>0.368</td>\n      <td>-0.092</td>\n      <td>1.453</td>\n      <td>0.218</td>\n      <td>-0.510</td>\n      <td>293.52756</td>\n      <td>41.111439</td>\n      <td>15.162</td>\n    </tr>\n    <tr>\n      <th>570</th>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>10.980246</td>\n      <td>6.930000e-07</td>\n      <td>-6.930000e-07</td>\n      <td>137.137607</td>\n      <td>0.000053</td>\n      <td>-0.000053</td>\n      <td>...</td>\n      <td>-159</td>\n      <td>4.462</td>\n      <td>0.098</td>\n      <td>-0.182</td>\n      <td>0.897</td>\n      <td>0.238</td>\n      <td>-0.119</td>\n      <td>282.79764</td>\n      <td>43.578129</td>\n      <td>14.212</td>\n    </tr>\n    <tr>\n      <th>4897</th>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>466.908240</td>\n      <td>1.194000e-02</td>\n      <td>-1.194000e-02</td>\n      <td>136.373100</td>\n      <td>0.019000</td>\n      <td>-0.019000</td>\n      <td>...</td>\n      <td>-146</td>\n      <td>4.456</td>\n      <td>0.102</td>\n      <td>-0.361</td>\n      <td>0.867</td>\n      <td>0.448</td>\n      <td>-0.103</td>\n      <td>297.65436</td>\n      <td>43.178551</td>\n      <td>15.202</td>\n    </tr>\n    <tr>\n      <th>625</th>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1.061933</td>\n      <td>1.250000e-06</td>\n      <td>-1.250000e-06</td>\n      <td>133.850441</td>\n      <td>0.000978</td>\n      <td>-0.000978</td>\n      <td>...</td>\n      <td>-167</td>\n      <td>3.975</td>\n      <td>0.259</td>\n      <td>-0.111</td>\n      <td>1.851</td>\n      <td>0.383</td>\n      <td>-0.575</td>\n      <td>288.90253</td>\n      <td>44.632992</td>\n      <td>12.953</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 40 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "source": [
     "X_train.head()"
    ]
@@ -104,11 +265,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale your data\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "X_scaler = MinMaxScaler().fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale your data"
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
    ]
   },
   {
@@ -194,9 +367,8 @@
    "name": "dev"
   },
   "kernelspec": {
-   "display_name": "Python [conda root]",
-   "language": "python",
-   "name": "conda-root-py"
+   "name": "python385jvsc74a57bd033888a5d72fd546c510608f5704d454dda4fecfe28f012ab1603f1178be745ca",
+   "display_name": "Python 3.8.5 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -208,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.5"
   },
   "nteract": {
    "version": "0.12.3"
